--- a/PuttMetricsAPP/View/FivePutts.xib
+++ b/PuttMetricsAPP/View/FivePutts.xib
@@ -1,38 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleAspectFit" id="iN0-l3-epB" customClass="FivePuttsXib" customModule="PuttMetricsAPP" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="360" height="493"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FivePuttsXib" customModule="PuttMetricsAPP" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="315" height="475"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FbN-AM-BCx">
-                    <rect key="frame" x="0.0" y="42" width="361" height="408"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="xje-hR-QZ6">
+                    <rect key="frame" x="0.0" y="5" width="315" height="470"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dKb-Wv-VQw">
+                            <rect key="frame" x="0.0" y="0.0" width="315" height="80"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="55" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pac-DZ-FRU">
+                                    <rect key="frame" x="0.0" y="0.0" width="315" height="80"/>
+                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="60"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="pac-DZ-FRU" secondAttribute="trailing" id="48Z-wd-2dR"/>
+                                <constraint firstAttribute="height" constant="80" id="HBx-tj-uD8"/>
+                                <constraint firstItem="pac-DZ-FRU" firstAttribute="top" secondItem="dKb-Wv-VQw" secondAttribute="top" id="hot-qa-Zlo"/>
+                                <constraint firstAttribute="bottom" secondItem="pac-DZ-FRU" secondAttribute="bottom" id="lP9-Gv-W2J"/>
+                                <constraint firstItem="pac-DZ-FRU" firstAttribute="leading" secondItem="dKb-Wv-VQw" secondAttribute="leading" id="pEF-KU-2YL"/>
+                            </constraints>
+                        </view>
+                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TEq-Sx-0Os">
+                            <rect key="frame" x="12.5" y="80" width="290" height="290"/>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="TEq-Sx-0Os" secondAttribute="height" multiplier="1:1" id="LB1-YU-zmW"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VPw-Pj-gXR">
+                            <rect key="frame" x="0.0" y="370" width="315" height="100"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="rHu-rj-9HU">
+                                    <rect key="frame" x="10" y="10" width="295" height="80"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nbl-Hj-3jM">
+                                            <rect key="frame" x="0.0" y="0.0" width="98.5" height="80"/>
+                                            <state key="normal" title="Missed"/>
+                                        </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G1s-sY-wPr">
+                                            <rect key="frame" x="98.5" y="0.0" width="98" height="80"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aiX-KW-STp">
+                                                    <rect key="frame" x="0.0" y="0.0" width="98" height="80"/>
+                                                    <color key="backgroundColor" red="0.098039215690000001" green="0.6943199806" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="aiX-KW-STp" firstAttribute="leading" secondItem="G1s-sY-wPr" secondAttribute="leading" id="Qjp-h2-XTQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="aiX-KW-STp" secondAttribute="bottom" id="T9r-Ao-pd3"/>
+                                                <constraint firstAttribute="trailing" secondItem="aiX-KW-STp" secondAttribute="trailing" id="TIN-yR-Gda"/>
+                                                <constraint firstItem="aiX-KW-STp" firstAttribute="top" secondItem="G1s-sY-wPr" secondAttribute="top" id="spk-H1-oXL"/>
+                                            </constraints>
+                                        </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNh-hN-Yv0">
+                                            <rect key="frame" x="196.5" y="0.0" width="98.5" height="80"/>
+                                            <state key="normal" title="Made"/>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="jNh-hN-Yv0" secondAttribute="trailing" id="1Xm-sR-uaf"/>
+                                        <constraint firstAttribute="bottom" secondItem="jNh-hN-Yv0" secondAttribute="bottom" id="5Ef-s4-LEQ"/>
+                                        <constraint firstItem="G1s-sY-wPr" firstAttribute="leading" secondItem="nbl-Hj-3jM" secondAttribute="trailing" id="H8W-kT-rhN"/>
+                                        <constraint firstItem="nbl-Hj-3jM" firstAttribute="top" secondItem="rHu-rj-9HU" secondAttribute="top" id="Q1B-1m-8gT"/>
+                                        <constraint firstItem="jNh-hN-Yv0" firstAttribute="leading" secondItem="G1s-sY-wPr" secondAttribute="trailing" id="fE6-ka-JkG"/>
+                                        <constraint firstItem="jNh-hN-Yv0" firstAttribute="top" secondItem="rHu-rj-9HU" secondAttribute="top" id="leR-XD-XNz"/>
+                                        <constraint firstAttribute="bottom" secondItem="nbl-Hj-3jM" secondAttribute="bottom" id="oTA-d8-oFE"/>
+                                        <constraint firstItem="nbl-Hj-3jM" firstAttribute="leading" secondItem="rHu-rj-9HU" secondAttribute="leading" id="qiY-5d-CdO"/>
+                                    </constraints>
+                                </stackView>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="rHu-rj-9HU" firstAttribute="leading" secondItem="VPw-Pj-gXR" secondAttribute="leading" constant="10" id="5Sj-QJ-Jna"/>
+                                <constraint firstItem="rHu-rj-9HU" firstAttribute="top" secondItem="VPw-Pj-gXR" secondAttribute="top" constant="10" id="V60-ZR-elX"/>
+                                <constraint firstAttribute="trailing" secondItem="rHu-rj-9HU" secondAttribute="trailing" constant="10" id="VOc-yF-06x"/>
+                                <constraint firstAttribute="height" constant="100" id="egD-s2-0on"/>
+                                <constraint firstAttribute="bottom" secondItem="rHu-rj-9HU" secondAttribute="bottom" constant="10" id="kUq-XZ-eXe"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="VPw-Pj-gXR" firstAttribute="top" secondItem="TEq-Sx-0Os" secondAttribute="bottom" id="JeQ-u7-tFG"/>
+                        <constraint firstAttribute="bottom" secondItem="VPw-Pj-gXR" secondAttribute="bottom" id="PkK-aW-AAd"/>
+                        <constraint firstAttribute="trailing" secondItem="VPw-Pj-gXR" secondAttribute="trailing" id="XE2-W1-4eb"/>
+                        <constraint firstItem="TEq-Sx-0Os" firstAttribute="top" secondItem="dKb-Wv-VQw" secondAttribute="bottom" id="dZg-Cv-5jC"/>
+                        <constraint firstAttribute="height" constant="470" id="eVr-os-y0f"/>
+                        <constraint firstItem="dKb-Wv-VQw" firstAttribute="top" secondItem="xje-hR-QZ6" secondAttribute="top" id="hjq-dH-Vcl"/>
+                        <constraint firstItem="dKb-Wv-VQw" firstAttribute="leading" secondItem="xje-hR-QZ6" secondAttribute="leading" id="kjE-sf-XQ5"/>
+                        <constraint firstAttribute="trailing" secondItem="dKb-Wv-VQw" secondAttribute="trailing" id="uZr-6n-u62"/>
+                        <constraint firstItem="VPw-Pj-gXR" firstAttribute="leading" secondItem="xje-hR-QZ6" secondAttribute="leading" id="yJ1-bX-b8N"/>
+                    </constraints>
+                </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="FbN-AM-BCx" firstAttribute="height" secondItem="Pyg-dw-hF9" secondAttribute="height" id="7AJ-3F-p3U"/>
-                <constraint firstItem="FbN-AM-BCx" firstAttribute="width" secondItem="Pyg-dw-hF9" secondAttribute="width" id="XOc-gc-nte"/>
+                <constraint firstItem="xje-hR-QZ6" firstAttribute="bottom" secondItem="Pyg-dw-hF9" secondAttribute="bottom" id="FJQ-LX-9n6"/>
+                <constraint firstItem="xje-hR-QZ6" firstAttribute="leading" secondItem="Pyg-dw-hF9" secondAttribute="leading" id="kPd-iG-x4J"/>
+                <constraint firstItem="xje-hR-QZ6" firstAttribute="trailing" secondItem="Pyg-dw-hF9" secondAttribute="trailing" id="x7C-0p-ehv"/>
             </constraints>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Pyg-dw-hF9"/>
             <connections>
-                <outlet property="OutsideViewContainerforProgressRing" destination="FbN-AM-BCx" id="HT5-v0-3Yz"/>
+                <outlet property="DistanceOfPuttLevelLBL" destination="pac-DZ-FRU" id="ga5-Yd-z8V"/>
+                <outlet property="madeBtn" destination="jNh-hN-Yv0" id="ihm-Ku-I7V"/>
+                <outlet property="missedPuttBTN" destination="nbl-Hj-3jM" id="f8i-hl-hu9"/>
+                <outlet property="progressRingViewDisplayBox" destination="TEq-Sx-0Os" id="JuQ-fC-M9n"/>
+                <outlet property="totalPuttsTakenLabel" destination="aiX-KW-STp" id="oSl-5H-3Tc"/>
             </connections>
-            <point key="canvasLocation" x="33" y="62.5"/>
+            <point key="canvasLocation" x="-219.5" y="0.5"/>
         </view>
     </objects>
 </document>
